--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.109.1",
     "@react-three/fiber": "^8.16.8",
     "@splinetool/react-spline": "^4.0.0",
+    "axios": "^1.7.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
